--- a/custom_components/heatpump_flow_control/translations/de.json
+++ b/custom_components/heatpump_flow_control/translations/de.json
@@ -16,8 +16,7 @@
           "min_vorlauf": "Minimale Vorlauftemperatur",
           "max_vorlauf": "Maximale Vorlauftemperatur",
           "update_interval": "Update-Intervall (Minuten)",
-          "learning_rate": "Lernrate",
-          "trend_history_size": "Trend-Historie Größe"
+          "learning_rate": "Lernrate"
         }
       }
     },
