fix is_heating condition

--- a/custom_components/heatpump_flow_control/translations/de.json
+++ b/custom_components/heatpump_flow_control/translations/de.json
@@ -10,9 +10,7 @@
           "raum_soll_sensor": "Raum-Soll Sensor (oder Climate Entity)",
           "vorlauf_ist_sensor": "Vorlauf-Ist Sensor",
           "vorlauf_soll_entity": "Vorlauf-Soll Entity (Input Number / Number / Climate)",
-          "betriebsart_sensor": "Betriebsart Sensor (optional)",
-          "betriebsart_heizen_wert": "Betriebsart-Wert für 'Heizen'",
-          "power_sensor": "Power-Sensor (optional - positiv=Netzbezug, negativ=Einspeisung)",
+          "is_heating_entity": "Is heating entity",
           "min_vorlauf": "Minimale Vorlauftemperatur",
           "max_vorlauf": "Maximale Vorlauftemperatur",
           "update_interval": "Update-Intervall (Minuten)",
